src/test/resources/annotator/ReservedEnumValue.proto
syntax = "proto3";

package annotator;

enum EnumMessage {
    X = 0;
    Y = <error descr="Reserved enum value: 1">1</error>;

    reserved 1;
}